# gemini-webapi-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
skill/: SKILL.md
skill/references/: image-prompting.md  tools.md
src/gemini_webapi_mcp/: __init__.py  __main__.py  server.py
